--- a/_study/CljStudy/my-app/resources/html/base.html
+++ b/_study/CljStudy/my-app/resources/html/base.html
@@ -6,10 +6,10 @@
     <title>Welcome to my-app</title>
 
     <!-- styles -->
-    {% style """/assets/bulma/css/bulma.min.css" %}
-    {% style """/assets/material-icons/css/material-icons.min.css" %}
+    {% style "/assets/bulma/css/bulma.min.css" %}
+    {% style "/assets/material-icons/css/material-icons.min.css" %}
 
-    {% style """/css/screen.css" %}
+    {% style "/css/screen.css" %}
   </head>
   <body>
       <!-- navbar -->
