--- a/etc/_팀교육/4회차/.dynLog/설퍼로딩컨트롤빌딩_Type Check Result.html
+++ b/etc/_팀교육/4회차/.dynLog/설퍼로딩컨트롤빌딩_Type Check Result.html
@@ -114,12 +114,1084 @@ button {
 <th>엑셀과 레빗에 둘다 있는 타입</th>
 </tr>
 <tr>
-<th>None</th>
+<th>1.Floors</th>
+<th></th>
 <th></th>
 <th></th>
 </tr>
 <tr>
-<th>None</th>
+<td></td>
+<td>모델링 X</td>
+<td>H_FL_AR_B07_Ceramic Tile</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 O</td>
+<td></td>
+<td>H_FL_AR_S17_RC Slab T150</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_FL_AR_S17_RC Deck Slab T200</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_FL_AR_S05_Grating_T32</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_FL_AR_S06_Removable Grating_T32</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_FL_AR_S07_CHK PL_T6</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_FL_AR_B10_Raised Floor_600x600xH700</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_FL_AR_S17_Roof RC Slab_T200</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_FL_AR_S17_STG Top Slab_T2000</td>
+</tr>
+<tr>
+<th>2.Roofs</th>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>Sloped Glazing</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_RF_AR_B05_Roof Panel Steel Mineral Wool T200</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_RF_AR_B05_Roof Single Sheet Steel T0.7</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 O</td>
+<td></td>
+<td>H_RF_AR_B06_Memb_XPS_PE_Protective Conc</td>
+</tr>
+<tr>
+<th>3.Walls</th>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_WA_AR_B02_Int Wall_Brick 1B</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_WA_AR_B02_Wall Panel_Steel_Mineral Wool_T120</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_WA_AR_B02_Wall Single Sheet_T0.7</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 O</td>
+<td>H_WA_AR_B02_Int Wall_Block T200</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_WA_AR_B02_Exterior Curtain Wall</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_WA_AR_B02_Ext Wall_RC T150_UG_Bitumen</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 O</td>
+<td></td>
+<td>H_WA_AR_B02_Ext Wall_RC T200</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_WA_AR_B02_Ext Wall_1L Gypsum_1B Brick_Glass Wool</td>
+</tr>
+<tr>
+<th>4.St Fdn</th>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SF_AR_S18_MAT_T450_Bitumen</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SF_AR_S19_PHC Pile D500_L30m_Driven</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>900x300</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SF_AR_B08_Pit Slab T500</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_SF_AR_S17_SOG T200</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 O</td>
+<td></td>
+<td>H_SF_AR_S18_W2400xL2400xT500_Bitumen</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_SF_AR_B08_Stoop T200</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_SF_AR_B01_EQ FDN_T300_Bitumen</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_SF_AR_B01_Mass_T2500_Bitumen</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_SF_AR_S18_Lean T50</td>
+</tr>
+<tr>
+<th>5.St Col</th>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SC_AR_S01_L-100x100x10</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SC_AR_S01_C-200×80x7.5x11</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SC_AR_S01_BH_BH-1000x400x24x34</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SC_AR_S01_H-100x100x6x8</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SC_AR_S01_RHS-125x75x4.5</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SC_AR_S01_SHS-350x350x12.5</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 O</td>
+<td>H_SC_AR_S15_W600xL600</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 O</td>
+<td>H_SC_AR_S15_UG PED_W600xL600_Bit_Anchor</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_SC_AR_S01_H-200x200x8x12</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_SC_AR_S15_UG PED_W1000xL1800_Bit_Anchor</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_SC_AR_S15_W300xL600</td>
+</tr>
+<tr>
+<th>6.St Framing</th>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L-100x100x10</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C-100x50x5x7.5</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C380x74</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C380x60</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C380x50.4</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C310x45</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C310x37</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C310x30.8</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C250x45</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C250x37</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C250x30</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C250x22.8</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C230x30</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C230x22</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C230x19.9</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C200x27.9</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C200x20.5</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C200x17.1</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C180x22</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C180x18.2</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C180x14.6</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C150x19.3</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C150x15.6</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C150x12.2</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C130x13</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C130x10.4</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C100x10.8</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C100x9.3</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C100x8</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C100x6.7</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C75x8.9</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C75x7.4</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C75x6.1</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_C75x5.2</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L51x51x3.2</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L51x51x4.8</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L51x51x6.4</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L51x51x7.9</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L51x51x9.5</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L64x64x4.8</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L64x64x6.4</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L64x64x7.9</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L64x64x9.5</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L64x64x12.7</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L76x76x4.8</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L76x76x6.4</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L76x76x7.9</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L76x76x9.5</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L76x76x11.1</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L76x76x12.7</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L89x89x6.4</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L89x89x7.9</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L89x89x9.5</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L89x89x11.1</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L89x89x12.7</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L102x102x6.4</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L102x102x7.9</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L102x102x9.5</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L102x102x11.1</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L102x102x12.7</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L102x102x15.9</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L102x102x19</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L127x127x7.9</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L127x127x9.5</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L127x127x11.1</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L127x127x12.7</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L127x127x15.9</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L127x127x19</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L127x127x22.2</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L152x152x7.9</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L152x152x9.5</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L152x152x11.1</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L152x152x12.7</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L152x152x14.3</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L152x152x15.9</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L152x152x19</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L152x152x22.2</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L152x152x25.4</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L203x203x12.7</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L203x203x14.3</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L203x203x15.9</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L203x203x19</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L203x203x22.2</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L203x203x25.4</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L203x203x28.6</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L254x254x19.1</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L254x254x22.2</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L254x254x25.4</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L254x254x28.6</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L254x254x31.8</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L254x254x34.9</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L305x305x25.4</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L305x305x28.6</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L305x305x31.8</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SB_AR_S02_L305x305x34.9</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 O</td>
+<td></td>
+<td>H_SB_AR_S16_TG_B400xH600</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 O</td>
+<td></td>
+<td>H_SB_AR_S16_B300xH600</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_SB_AR_S02_CT-150x150x6.5x9</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_SB_AR_S02_H-194x150x6x9</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_SB_AR_S02_BH-900x300x20x40</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_SB_AR_S02_LC-150x75x20x4.5</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_SB_AR_S02_RHS-150x100x6</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_SB_AR_S02_SHS-150x150x6</td>
+</tr>
+<tr>
+<th>7.Ceilings</th>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_CE_AR_B09_Acrylic Emulsion Paint</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_CE_AR_B09_Water Emulsion Paint</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_CE_AR_B09_Acoustic Tiled Ceiling System_600x600x9t_M_bar</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 O</td>
+<td></td>
+<td>H_CE_AR_B09_Acoustic Ceiling_T Bar_600x600x9T</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_CE_AR_B09_Moisture Resistant Ceiling_M Bar_600x1200x9T</td>
+</tr>
+<tr>
+<th>8.Doors</th>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+<tr>
+<td></td>
+<td>모델링 O</td>
+<td>H_DR_AR_B12_Double Door_Steel_W2400xH2800</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 O</td>
+<td>H_DR_AR_B12_Double Door_Steel_W3000xH3000</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 O</td>
+<td></td>
+<td>H_DR_AR_B12_Single Door_Steel_W1000xH2100</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 O</td>
+<td></td>
+<td>H_DR_AR_B12_Double Door_Steel_W2000xH2100</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_DR_AR_B12_Roll up Door_Steel_W5000xH6000_Manual</td>
+</tr>
+<tr>
+<th>9.Windows</th>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+<tr>
+<td></td>
+<td>모델링 O</td>
+<td></td>
+<td>H_WD_AR_B11_Sliding_Steel Window_DG_W2000xH1000</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_WD_AR_B11_Fix_Steel Window_SG_W2000xH1000</td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_WD_AR_B11_Fix_uPVC Window_SG_W2000xH1000</td>
+</tr>
+<tr>
+<th>10.Stairs</th>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>None</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>Precast Stair</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_SR_AR_S09_Steel Stair_W1000</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_SR_AR_B08_Concrete Stair_Outdoor_W1000</td>
+</tr>
+<tr>
+<th>11.Railings</th>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>Default new Railing System Type</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td></td>
+<td>H_RL_AR_S10_Steel Handrail_H1100</td>
+</tr>
+<tr>
+<th>13.Generic</th>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>600mm Arial</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_GM_AML_No Caged Steel Ladder_H5000</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_GM_AME_Steel Downspout D100</td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td>모델링 X</td>
+<td>H_GM_AML_Caged Ladder_Bracket Set 150</td>
+<td></td>
 </tr>
 </table>
 </div>
