--- a/etc/_팀교육/StrToolkit/UI_test/index.html
+++ b/etc/_팀교육/StrToolkit/UI_test/index.html
@@ -3,53 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wind Load Calculator</title>
+    <title>Load Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Dead / Live Load Information 입력기</h1>
+        <h1>Dead Load Information 입력기</h1>
         <div class="form-group">
-            <label for="DLinput">층별 DL 입력 (kN/m²):</label>
+            <label for="DLinput">층별 DL 입력 (kN/m²)</label>
                 <button id="increaseButton">+</button>
                 <button id="decreaseButton">-</button>
-                <div id="inputContainer"></div>
+                <div id="DLinputContainer"></div>
         </div>
-        <button onclick="saveLoadData_asJson()">Save Data</button>
+        <button onclick="get_DL_json()">Save Data</button>
         <div id="result"></div>
     </div>
     <div> <span> ... </span> </div>
     <div class="container">
-        <h1>Wind Load Information 입력기</h1>
+        <h1>Live Load Information 입력기</h1>
         <div class="form-group">
-            <label for="codeSelect">코드선택:</label>
-            <select id="codeSelect">
+            <label for="LLinput">층별 LL 입력 (kN/m²)</label>
+                <button id="increaseButton">+</button>
+                <button id="decreaseButton">-</button>
+                <div id="LLinputContainer"></div>
+        </div>
+        <button onclick="get_LL_json()">Save Data</button>
+        <div id="result"></div>
+    </div>
+    <div> <span> ... </span> </div>
+    <div class="container" id="wind-Pane">
+        <h1>Wind Load Information 입력기</h1>
+        <div class="form-group-wind">
+            <label for="wind-codeSelect">코드선택</label>
+            <select class="wind_vals" id="wind-codeSelect">
                 <option value="NA">None Application</option>
                 <option value="ASCE">ASCE 7-22</option>
                 <option value="KDS">KDS 41 12 00</option>
                 <option value="EN">EN1991-1-1-4</option>
             </select>
         </div>
-        <div class="form-group">
-            <label for="BasicWindSpeed">Basic Wind Speed (m/s):</label>
-            <input type="number" id="BasicWindSpeed" placeholder="Enter wind speed in m/s">
+        <div class="form-group-wind">
+            <label for="BasicWindSpeed">Basic Wind Speed (m/s)</label>
+            <input class="wind_vals" type="number" id="BasicWindSpeed" placeholder="Enter wind speed in m/s">
         </div>
-        <div class="form-group">
-            <label for="exposureCategory">Exposure Category:</label>
-            <select id="exposureCategory">
+        <div class="form-group-wind">
+            <label for="exposureCategory">Exposure Category</label>
+            <select class="wind_vals" id="exposureCategory">
                 <option value="A">A</option>
                 <option value="B">B</option>
                 <option value="C">C</option>
                 <option value="D">D</option>
             </select>
         </div>
-        <div class="form-group">
-            <label for="TopoFactor">Topographic factor(Kzt):</label>
-            <input type="number" id="TopoFactor" placeholder="Enter factor value">
+        <div class="form-group-wind">
+            <label for="TopoFactor">Topographic factor(Kzt)</label>
+            <input class="wind_vals" type="number" id="TopoFactor" placeholder="Enter factor value">
         </div>
-        <div class="form-group">
-            <label for="enclosureClass">Enclosure Classification:</label>
-            <select id="exposureCategory">
+        <div class="form-group-wind">
+            <label for="enclosureClass">Enclosure Classification</label>
+            <select class="wind_vals" id="exposureCategory">
                 <option value="A">Shelter</option>
                 <option value="B">Building - Enclosed</option>
                 <option value="C">Building - Parially Enclosed</option>
@@ -57,15 +69,15 @@
             </select>
         </div>
 
-        <button onclick="saveLoadData_asJson()">Save Data</button>
-        <div id="result"></div>
+        <button onclick="get_WindInfo_json()">Save Data</button>
+        <div id="wind-result"></div>
     </div>
     <div> <span> ... </span> </div>
     <body>
         <div class="container">
             <h1>Seismic Load Information 입력기</h1>
             <div class="form-group">
-                <label for="codeSelect">코드선택:</label>
+                <label for="codeSelect">코드선택</label>
                 <select id="codeSelect">
                     <option value="NA">None Application</option>
                     <option value="ASCE">ASCE 7-05</option>
@@ -74,7 +86,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="siteClass">Site Class:</label>
+                <label for="siteClass">Site Class</label>
                 <select id="siteClass">
                     <option value="A">A</option>
                     <option value="B">B</option>
@@ -85,7 +97,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="riskCategory">Risk Category:</label>
+                <label for="riskCategory">Risk Category</label>
                 <select id="riskCategory">
                     <option value="1">Ⅰ</option>
                     <option value="2">Ⅱ</option>
@@ -94,27 +106,27 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="rmf">Response modification factor:</label>
+                <label for="rmf">Response modification factor</label>
                 <blockquote>
                 <div class="sub-form-group">
-                    <label for="rmfLong">Longitude Side (X-axis):</label>
+                    <label for="rmfLong">Longitude Side (X-axis)</label>
                     <input type="number" id="rmfLong" placeholder="Enter factor value">
                 </div>
                 <div class="sub-form-group">
-                    <label for="rmfTrans">Transverse Side (Y-axis):</label>
+                    <label for="rmfTrans">Transverse Side (Y-axis)</label>
                     <input type="number" id="rmfTrans" placeholder="Enter factor value">
                 </div>
                 </blockquote>
             </div>
             <div class="form-group">
-                <label for="spectralAccelParam">Spectral acceleration parameters:</label>
+                <label for="spectralAccelParam">Spectral acceleration parameters</label>
                 <blockquote>
                 <div class="sub-form-group">
-                    <label for="sapSds">Sds:</label>
+                    <label for="sapSds">Sds</label>
                     <input type="number" id="sapSds" placeholder="Enter factor value">
                 </div>
                 <div class="sub-form-group">
-                    <label for="sapSd1">Sd1:</label>
+                    <label for="sapSd1">Sd1</label>
                     <input type="number" id="sapSd1" placeholder="Enter factor value">
                 </div>
                 </blockquote>
