--- a/etc/_팀교육/StrToolkit/2024년 중간발표/.dynTemp/index.html
+++ b/etc/_팀교육/StrToolkit/2024년 중간발표/.dynTemp/index.html
@@ -153,7 +153,7 @@ button:hover {
     </div>
     
     <div class="container" id="wind-Pane">
-        <h2>Wind Load Information 입력기</h2>
+        <h2>Wind Load Info. 입력기</h2>
         <div class="form-group-wind">
             <label for="wind-codeSelect">코드선택</label>
             <select class="wind_vals" id="wind-codeSelect">
@@ -195,7 +195,7 @@ button:hover {
     </div>
     
     <div class="container">
-        <h2>Seismic Load Information 입력기</h2>
+        <h2>Seismic Load Info. 입력기</h2>
         <div class="form-group-seismic">
             <label for="codeSelect">코드선택</label>
             <select class="seismic_vals" id="codeSelect">
