--- a/etc/_팀교육/StrToolkit/2024년 중간발표/.dynTemp/index.html
+++ b/etc/_팀교육/StrToolkit/2024년 중간발표/.dynTemp/index.html
@@ -158,7 +158,7 @@ button:hover {
             <label for="wind-codeSelect">코드선택</label>
             <select class="wind_vals" id="wind-codeSelect">
                 <option value="NA">None Application</option>
-                <option value="ASCE">ASCE 7-22</option>
+                <option value="ASCE" selected>ASCE 7-22</option>
                 <option value="KDS">KDS 41 12 00</option>
                 <option value="EN">EN1991-1-1-4</option>
             </select>
@@ -200,7 +200,7 @@ button:hover {
             <label for="codeSelect">코드선택</label>
             <select class="seismic_vals" id="codeSelect">
                 <option value="NA">None Application</option>
-                <option value="ASCE">ASCE 7-05</option>
+                <option value="ASCE" selected>ASCE 7-05</option>
                 <option value="KDS">KDS 41 12 00</option>
                 <option value="EN">EN1991-8</option>
             </select>
