--- a/etc/_팀교육/StrToolkit/2024년 중간발표/.dynTemp/index.html
+++ b/etc/_팀교육/StrToolkit/2024년 중간발표/.dynTemp/index.html
@@ -4,11 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Load Information Input Window</title>
+    <title>HSD tool-kit Input Window</title>
 </head>
 <style>
 
 /* style.css */
+:root {
+  --text-color: #f0f4f5;
+  --background-color: #263343;
+  --accent-color: orange;
+  --icons-color: rgb(152, 187, 201);
+  --bodybackground-color: lightgray;
+}
+
+canvas {
+    display: block;
+    }
 
 body {
     font-family: Arial, sans-serif;
@@ -24,7 +35,58 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin: 50px 20px 100px 20px;
+    margin: 20px 20px 20px 20px;
+}
+
+a {
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+.navbar {
+  display: flex;
+  position: sticky;
+  top: 0px; /* 도달했을때 고정시킬 위치 */
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--background-color);
+  padding: 8px 12px;
+  font-family: 'STIX Two Math';
+}
+
+.navbar__logo i {
+  color: var(--accent-color);
+  padding-left: 0;
+}
+
+.navbar__menu {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding-left: 0;
+}
+
+.navbar__menu li {
+  padding: 8px 30px;
+  color: var(--text-color);
+}
+
+.navbar__menu li:hover {
+  background-color: var(--accent-color);
+  border-radius: 3px;
+}
+
+.navbar__icons {
+  list-style: none;
+  display: flex;
+  color: var(--icons-color);
+  margin: 0;
+  padding-left: 0;
+}
+
+.navbar__icons li {
+  padding: 8px 12px;
+  margin: 0;
 }
 
 .content {
@@ -39,7 +101,7 @@ body {
 .container {
     background: #fff;
     padding: 20px;
-    margin: 5px 5px 5px 5px;
+    margin: 20px 5px 5px 5px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 350px;
@@ -119,14 +181,59 @@ button:hover {
 }
 
 
+#framePage {
+  display: inline;
+}
+
+#materialPage {
+  display: None;
+}
+
+#loadPage {
+  display: None;
+}
+
+
 </style>
 
 <body>
 
 <div class="header">
-<h1>::: Load Information Input Center :::</h1>
+<h1>::: HSD tool-kit Input Center :::</h1>
 </div>
 
+
+
+<nav class="navbar">
+
+  <ul class="navbar__menu">
+    <li id="frame_MenuBtn">Frame View</li>
+    <li id="material_MenuBtn">About Material</li>
+    <li id="load_MenuBtn">About Load Info.</li>
+  </ul>
+
+</nav>
+
+
+
+
+
+<div id="materialPage">
+
+    <div class="container" id="material-Pane">
+        <h2>[추가예정] 강종 선택기 & 철근 입력기</h2>
+
+
+        <button>Save Data</button>
+        <div id="mat-result"></div>
+    </div>
+
+</div>
+
+
+
+
+<div id="loadPage">
 <div class="content">
     <div class="container">
         <h2>Dead Load Information 입력기</h2>
@@ -257,8 +364,15 @@ button:hover {
         <div id="seismic-result"></div>
     </div>
 </div>
+
+</div>
+
+
     
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/examples/js/controls/OrbitControls.js"></script>
     <script src="js/script.js"></script>
+    
 </body>
 </html>
 
