--- a/etc/_팀교육/StrToolkit/2024년 중간발표/.dynTemp/index.html
+++ b/etc/_팀교육/StrToolkit/2024년 중간발표/.dynTemp/index.html
@@ -244,7 +244,7 @@ button:hover {
                 <div id="DLinputContainer"></div>
         </div>
         <button onclick="saveLoadData_asJson('HSD_DL.json', get_DL_json())">Save Data</button>
-        <div id="result"></div>
+        <div id="DL-result"></div>
     </div>
     
     <div class="container">
@@ -256,7 +256,7 @@ button:hover {
                 <div id="LLinputContainer"></div>
         </div>
         <button onclick="saveLoadData_asJson('HSD_LL.json', get_LL_json())">Save Data</button>
-        <div id="result"></div>
+        <div id="LL-result"></div>
     </div>
     
     <div class="container" id="wind-Pane">
