--- a/etc/_팀교육/StrToolkit/2024년 중간발표/.dynTemp/index.html
+++ b/etc/_팀교육/StrToolkit/2024년 중간발표/.dynTemp/index.html
@@ -263,7 +263,7 @@ button:hover {
         <h2>Wind Load Info. 입력기</h2>
         <div class="form-group-wind">
             <label for="wind-codeSelect">코드선택</label>
-            <select class="wind_vals" id="wind-codeSelect">
+            <select class="wind_vals" id="wind-codeSelect" disabled>
                 <option value="NA">None Application</option>
                 <option value="ASCE" selected>ASCE 7-22</option>
                 <option value="KDS">KDS 41 12 00</option>
@@ -305,7 +305,7 @@ button:hover {
         <h2>Seismic Load Info. 입력기</h2>
         <div class="form-group-seismic">
             <label for="codeSelect">코드선택</label>
-            <select class="seismic_vals" id="codeSelect">
+            <select class="seismic_vals" id="codeSelect" disabled>
                 <option value="NA">None Application</option>
                 <option value="ASCE" selected>ASCE 7-05</option>
                 <option value="KDS">KDS 41 12 00</option>
