--- a/H_Acc-RVT-Summary/popup.html
+++ b/H_Acc-RVT-Summary/popup.html
@@ -14,6 +14,8 @@
   <h2>ACC 모델 인스펙터 업그레이드</h2>
   <button id="fetchProperties">객체 속성 가져오기</button>
   <button id="fetchFamilyTypes">패밀리 타입 가져오기</button>
+  <!-- 새로 추가하는 버튼 -->
+  <button id="fetchRooms">룸 정보 가져오기</button>
   <script src="popup.js"></script>
 </body>
 </html>
